--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "reactfanwiki",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://rnkr1998.github.io/reactfanwiki/",
+  "homepage": "https://rnkr1998.github.io/reactfanwiki/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "dateformat": "^3.0.3",
-    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
@@ -21,7 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy":"npm run deploy",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
